# rust-template

./: Cargo.toml  Cross.toml
cicd/docker/: Dockerfile  build
crates/core/: Cargo.toml  main.rs
crates/utils/: Cargo.toml
tests/: tests.rs
